--- a/slides.org
+++ b/slides.org
@@ -2,26 +2,33 @@
 #+AUTHOR:   Claudio Marchiori
 #+LANGUAGE: it
 
-* Componenti Standalone\
+* Componenti Standalone
 
-  - In Angular 16 è stata introdotta una nuova tipologia di componenti, le *standalone components*, che offrono un modo più semplice e modulare di sviluppare le applicazioni.
-  - La principale differenza rispetto ai componenti tradizionali è che non necessitano di essere dichiarati all'interno di un modulo NgModule. Questo semplifica la struttura e il boilerplate del codice, rendendolo più leggibile e manutenibile.
-  - Un componente standalone dichiara le proprie dipendenze (componenti, direttive e pipe) direttamente tramite la proprietà ~imports~ del decoratore ~@Component~.
+In Angular 16 è stata introdotta una nuova tipologia di componenti, le *standalone components*, che offrono un modo più semplice e modulare di sviluppare le applicazioni.
+La principale differenza rispetto ai componenti tradizionali è che non necessitano di essere dichiarati all'interno di un modulo *NgModule*. Questo semplifica la struttura e il boilerplate del codice, rendendolo più leggibile e manutenibile.
+Un componente standalone dichiara le proprie dipendenze (componenti, direttive e pipe) direttamente tramite la proprietà ~imports~ del decoratore ~@Component~.
+
+**Vantaggi**
+
+  - Eliminazione dei moduli NgModule: struttura più semplice e meno codice.
+  - Maggiore modularità: componenti, direttive e pipe più indipendenti e riutilizzabili.
+  - Migliore leggibilità e manutenibilità del codice.
 
 ** Approccio con moduli (Angular < 16)
 
 #+begin_src typescript
 import { NgModule } from '@angular/core';
 import { CommonModule } from '@angular/common';
-import { ReactiveFormsModule } from '@angular/forms';
 import { MatIconModule } from '@angular/material/icon';
 import { MatButtonModule } from '@angular/material/button';
 import { MatTooltipModule } from '@angular/material/tooltip';
+import { ReactiveFormsModule } from '@angular/forms';
+import { FooService } from './foo.service';
 import { ButtonComponent } from './button.component';
-import { AnchorComponent } from './anchor.component';
 
 @NgModule({
-  declarations: [ButtonComponent, AnchorComponent, /* ... */],
+  declarations: [ButtonComponent, /* ... */],
+  providers: [FooService, /* ... */],
   imports: [
     CommonModule,
     MatIconModule,
@@ -30,9 +37,58 @@ import { AnchorComponent } from './anchor.component';
     ReactiveFormsModule,
     /* ... */
   ],
-  exports: [ButtonComponent, AnchorComponent, /* ... */]
+  exports: [ButtonComponent, /* ... */]
 })
-export class LinkModule { }
+export class ButtonModule { }
+#+end_src
+
+** Approccio con componenti standalone (Angular >= 16)
+
+#+begin_src typescript
+import { Component, Input } from '@angular/core';
+import { CommonModule } from '@angular/common';
+import { MatIconModule } from '@angular/material/icon';
+import { MatButtonModule } from '@angular/material/button';
+import { MatTooltipModule } from '@angular/material/tooltip';
+import { ReactiveFormsModule } from '@angular/forms';
+import { FooService } from './foo.service';
+
+@Component({
+  selector: 'app-button',
+  standalone: true, // ← definizione di un componente standalone
+  imports: [ // ← Qui si dichiarano le dipendenze
+    CommonModule,
+    MatIconModule,
+    MatButtonModule,
+    MatTooltipModule,
+    ReactiveFormsModule,
+    /* ... */
+  ]
+  providers: [FooService, /* ... */], // ← Qui si dichiarano i servizi
+  template: `
+    <button mat-raised-button
+            [matTooltip]="tooltip"
+            (click)="onClick()">
+      <mat-icon>{{ icon }}</mat-icon>
+      {{ label }}
+    </button>
+  `,
+  styles: [],
+})
+export class ButtonComponent {
+  @Input() icon!: string;
+  @Input() label!: string;
+  @Input() tooltip!: string;
+
+  myForm = new FormGroup({
+    name: new FormControl('')
+  });
+
+  onClick() {
+    // Esempio di logica con Reactive Forms
+    console.log(this.myForm.value);
+  }
+}
 #+end_src
 
 ** Componenti Standalone
@@ -45,18 +101,18 @@ import { ReactiveFormsModule } from '@angular/forms';
 
 @Component({
   selector: 'app-my-component',
+  standalone: true,
+  imports: [CommonModule, ReactiveFormsModule, /* ... */]
   template: `
     <p>This is a standalone component!</p>
   `,
   styles: [],
   providers: [],
-  standalone: true,
-  imports: [CommonModule, ReactiveFormsModule, /* ... */] // Qui si dichiarano le dipendenze
 })
 export class MyComponent { }
 #+end_src
 
-** Direttive Standalone
+*** Direttive Standalone
 
 Anche le direttive possono essere definite come standalone, utilizzando la stessa proprietà ~standalone: true~ nel decoratore ~@Directive~.
 
@@ -69,7 +125,7 @@ Anche le direttive possono essere definite come standalone, utilizzando la stess
 export class MyAttributeDirective { }
 #+end_src
 
-** Pipe Standalone
+*** Pipe Standalone
 
 Analogamente, anche le pipe possono essere standalone e dichiarate all'interno della sezione ~imports~ del componente che le utilizza.
 
@@ -86,13 +142,7 @@ export class MyFilterPipe implements PipeTransform {
 }
 #+end_src
 
-** Vantaggi
-
-  - Eliminazione dei moduli NgModule: struttura più semplice e meno codice.
-  - Maggiore modularità: componenti, direttive e pipe più indipendenti e riutilizzabili.
-  - Migliore leggibilità e manutenibilità del codice.
-
-** Esempio di utilizzo
+*** Esempio di utilizzo
 
 In un componente standalone, puoi importare direttamente altri componenti, direttive o pipe standalone:
 
@@ -100,13 +150,16 @@ In un componente standalone, puoi importare direttamente altri componenti, diret
 import { MyAppComponent } from './my-app.component';
 import { MyAttributeDirective } from './my-attribute.directive';
 import { MyFilterPipe } from './my-filter.pipe';
+import { FooService } from './foo.service';
 
 @Component({
   // ...
   standalone: true,
-  imports: [MyAppComponent, MyAttributeDirective, MyFilterPipe]
+  imports: [MyAppComponent, MyAttributeDirective, MyFilterPipe],
+  providers: [FooService],
+  /* ... */
 })
-export class MyParentComponent { }
+export class MyParentComponent { /* ... */ }
 #+end_src
 
 ** Componenti, direttive e pipe standalone: una distinzione importante
@@ -137,18 +190,294 @@ import { MyStandaloneAttributeDirective } from './my-attribute.directive';
 import { MyFilterPipe } from './my-filter.pipe';
 
 @NgModule({
-  declarations: [MyFilterPipe],
-  imports: [
+  declarations: [MyFilterPipe], // ← la classe MyFilterPipe non è ancora stata dichiarata standalone
+  imports: [ // ← questi componenti sono stati resi standalone e vengono importati solo per essere successivamente esportati
     MyStandaloneAppComponent,
     MyStandaloneAttributeDirective,
   ],
-  exports: [MyStandaloneAppComponent, MyStandaloneAttributeDirective]
+  exports: [MyFilterPipe, MyStandaloneAppComponent, MyStandaloneAttributeDirective]
 })
-export class MyOldModule { }
+export class MyOldModule { /* ... */ }
 #+end_src
 
+* Directive Composition API e hostDirectives in Angular
+
+- [[https://angular.dev/guide/directives/directive-composition-api][Guida ufficiale Angular]] ([[https://stackblitz.com/edit/stackblitz-starters-jrxkcahg][Playground]])
+
+A partire da Angular 16, è possibile comporre componenti e direttive in modo più modulare grazie alle **Directive Composition API**.
+L'elemento chiave di questa API è la proprietà =hostDirectives=, che consente di **aggregare direttive standalone** in un componente senza modificarne il template.
+
+**🔹 Vantaggi principali:**
+- **Riutilizzo del codice** → le direttive possono essere condivise tra più componenti senza dichiararle nel template.
+- **Separazione delle responsabilità** → ogni direttiva può gestire una specifica funzionalità senza mescolarsi con la logica del componente.
+- **Mappatura di Input/Output** → consente di rinominare =@Input= e =@Output= delle direttive per adattarli al contesto del componente.
+
+**🔹 Quando usare hostDirectives?**
+- **Principalmente nelle direttive**, per creare comportamenti riutilizzabili senza ereditarietà complessa.
+- **Nei componenti solo se strettamente necessario**, quando si vuole includere automaticamente una direttiva senza dichiararla nel template.
+
+#+BEGIN_SRC typescript
+@Component({
+  selector: 'app-loading-button',
+  standalone: true,
+  template: `<button>Carica</button>`,
+  hostDirectives: [{ directive: MyDirective, inputs: ['someInput'], outputs: ['someOutput'] }]
+})
+export class LoadingButtonComponent {}
+#+END_SRC
+
+** Differenza tra hostDirectives ed ereditarietà classica
+
+L'uso di =hostDirectives= **non** fa ereditare i metodi interni della direttiva aggiunta, **a differenza di `extends`** nell'ereditarietà classica.
+
+**📌 Differenza tra `hostDirectives` ed `extends`**
+| Caratteristica               | `extends` (Ereditarietà classica) | `hostDirectives` |
+|------------------------------|----------------------------------|------------------|
+| **Eredita metodi e proprietà protette/private** | ✅ Sì | ❌ No |
+| **Eredita input/output** | ❌ No (deve essere ridefinito) | ✅ Sì (se esplicitamente mappato) |
+| **Eredita metodi pubblici** | ✅ Sì | ❌ No |
+| **Supporta più "estensioni"** | ❌ No (solo una classe base) | ✅ Sì (può aggregare più direttive) |
+
+---
+
+*** Cosa eredita hostDirectives?
+
+- ✔ **Solo ciò che è esplicitamente mappato negli `inputs` e `outputs`**
+- ✔ Il comportamento della direttiva (influisce sullo stesso host element)
+- ✖ **Non eredita metodi o proprietà pubbliche della direttiva inclusa**
+
+💡 **Se hai bisogno di accedere a metodi della direttiva inclusa, devi ottenere manualmente un riferimento a essa.**
+
+---
+
+*** 📌 Esempio: cosa NON viene ereditato
+#+BEGIN_SRC typescript
+@Directive({
+  selector: '[appBase]',
+  standalone: true
+})
+export class BaseDirective {
+  @Input() value = 'Base Value';
+
+  logMessage() {
+    console.log('Metodo interno della direttiva');
+  }
+}
+
+@Directive({
+  selector: '[appEnhanced]',
+  standalone: true,
+  hostDirectives: [{ directive: BaseDirective, inputs: ['value'] }]
+})
+export class EnhancedDirective {
+  constructor() {}
+
+  ngOnInit() {
+    this.logMessage(); // ❌ Errore: logMessage() non è disponibile!
+  }
+}
+#+END_SRC
+
+🔴 **Errore:** il metodo =logMessage()= non viene ereditato da =BaseDirective=.
+
+---
+
+*** 📌 Come accedere ai metodi di una direttiva inclusa?
+Devi **iniettare la direttiva inclusa** manualmente nel costruttore:
+#+BEGIN_SRC typescript
+@Directive({
+  selector: '[appEnhanced]',
+  standalone: true,
+  hostDirectives: [{ directive: BaseDirective, inputs: ['value'] }]
+})
+export class EnhancedDirective {
+  constructor(private baseDirective: BaseDirective) {}
+
+  ngOnInit() {
+    this.baseDirective.logMessage(); // ✅ Funziona!
+  }
+}
+#+END_SRC
+
+👉 Ora =logMessage()= è accessibile perché otteniamo un riferimento esplicito a =BaseDirective=.
+
+---
+
+**📌 È obbligatorio specificare inputs e outputs?**
+No, non è obbligatorio.
+Tuttavia, **se non vengono specificati, il componente o la direttiva che utilizza =hostDirectives= non erediterà automaticamente gli input/output della direttiva.**
+
+**🔹 Cosa succede se non vengono dichiarati?**
+- Gli input e gli output della direttiva **non saranno accessibili** nel contesto in cui è usata.
+- Se il componente o la direttiva tenta di accedere a un input/output non mappato, **Angular non genererà errori**, ma semplicemente ignorerà tali proprietà.
+
+✅ **Esempio senza mapping di inputs/outputs**
+#+BEGIN_SRC typescript
+@Directive({
+  selector: '[appExample]',
+  standalone: true,
+  hostDirectives: [{ directive: SomeDirective }]
+})
+export class ExampleDirective {}
+#+END_SRC
+👉 Qui, =appExample= utilizza =SomeDirective=, **ma non ha accesso ai suoi input/output** perché non sono stati mappati.
+
+---
+
+*** 📌 hostDirectives
+
+L'uso principale di =hostDirectives= è **sulle direttive** per creare **comportamenti componibili e modulari**.
+Questa tecnica permette di **raggruppare più direttive in una sola**, mantenendo il codice più pulito e riutilizzabile.
+
+✅ **Esempio: composizione di direttive**
+#+BEGIN_SRC typescript
+@Directive({
+  selector: '[appAdvancedTooltip]',
+  standalone: true,
+  hostDirectives: [{ directive: TooltipDirective, inputs: ['message'], outputs: ['onShow'] }]
+})
+export class AdvancedTooltipDirective {}
+#+END_SRC
+👉 Qui, la direttiva =appAdvancedTooltip= **integra automaticamente** il comportamento di =TooltipDirective=, evitando di doverla dichiarare esplicitamente nel template.
+
+
 #+BEGIN_COMMENT
-** Directive composition API
+
+**📌 Quando usare hostDirectives in un componente?**
+- Quando si vuole **aggregare direttive** senza doverle dichiarare nel template.
+- Quando si ha bisogno di **mappare gli input/output** di una direttiva in modo che siano gestiti direttamente dal componente.
+- Per favorire un'architettura basata sulla **composizione anziché l'ereditarietà**.
+
+**✅ Esempio corretto di utilizzo:**
+#+BEGIN_SRC typescript
+@Component({
+  selector: 'app-loading-button',
+  standalone: true,
+  template: `<button>Carica</button>`,
+  hostDirectives: [{ directive: MyDirective, inputs: ['someInput'], outputs: ['someOutput'] }]
+})
+export class LoadingButtonComponent {}
+#+END_SRC
+
+---
+
+**❌ Quando *NON* usare hostDirectives in un componente?**
+1. **Se la direttiva può essere dichiarata nel template con [myDirective]**
+   - Se l'unico motivo per usare =hostDirectives= è evitare di scrivere la direttiva nel template, allora probabilmente **non è necessario**.
+
+2. **Se la direttiva modifica il DOM del componente**
+   - =hostDirectives= **non modifica il template**, ma solo i suoi host bindings.
+   - Se hai bisogno di cambiare il DOM, usa invece una direttiva strutturale (=*ngIf=, =*ngFor=).
+
+---
+
+
+**📌 È obbligatorio specificare inputs e outputs in hostDirectives?**
+No, non è obbligatorio.
+Se non vengono specificati, il componente **non eredita automaticamente gli input e gli output della direttiva**.
+
+**🔹 Cosa succede se non vengono dichiarati?**
+- Gli input e gli output della direttiva **non saranno accessibili nel componente**.
+- Se il componente tenta di accedere a un input/output che non è stato mappato, Angular non genererà errori, ma semplicemente non lo considererà.
+
+**✅ Esempio senza mapping di inputs/outputs**
+#+BEGIN_SRC typescript
+@Component({
+  selector: 'app-example',
+  standalone: true,
+  template: `<p>Componente senza input mappati</p>`,
+  hostDirectives: [{ directive: SomeDirective }]
+})
+export class ExampleComponent {}
+#+END_SRC
+👉 In questo caso, **il componente userà la direttiva**, ma non avrà accesso ai suoi input/output.
+
+---
+
+**📌 Conclusione**
+- =hostDirectives= è uno strumento potente per **comporre comportamenti senza modificare il template del componente**.
+- Se gli input/output non sono mappati, il componente non potrà utilizzarli.
+- Se la direttiva è già dichiarata nel template, =hostDirectives= potrebbe non essere necessario.
+- Non può **modificare il DOM del componente**, ma solo i suoi binding.
+
+💡 **Utilizzalo quando serve maggiore modularità e componibilità nel codice Angular!** 🚀
+#+END_COMMENT
+
+#+BEGIN_COMMENT
+ **~hostDirectives~: un ponte tra direttive**
+
+  - Immagina di avere una direttiva ~appCustomStyle~ che applica stili personalizzati a un elemento, e una direttiva ~appTooltip~ che aggiunge un tooltip.
+  - Con ~hostDirectives~, puoi creare una nuova direttiva ~appStyledTooltip~ che "combina" le funzionalità di ~appCustomStyle~ e ~appTooltip~ semplicemente "ospitandole" al suo interno.
+  - In questo modo, ~appStyledTooltip~ erediterà automaticamente gli stili personalizzati di ~appCustomStyle~ e il tooltip di ~appTooltip~, senza doverne riscrivere il codice.
+
+  #+begin_src typescript
+  @Directive({
+    selector: '[appCustomStyle]',
+    standalone: true,
+    inputs: ['customStyleInput'], // Input di esempio
+    outputs: ['customStyleOutput'] // Output di esempio
+  })
+  export class CustomStyleDirective {
+    @Input() customStyleInput: any;
+    @Output() customStyleOutput = new EventEmitter<any>();
+    // Logica per applicare stili personalizzati
+  }
+
+  @Directive({
+    selector: '[appTooltip]',
+    standalone: true,
+    inputs: ['tooltipText'], // Input di esempio
+    outputs: ['tooltipShown'] // Output di esempio
+  })
+  export class TooltipDirective {
+    @Input() tooltipText: string;
+    @Output() tooltipShown = new EventEmitter<boolean>();
+    // Logica per aggiungere un tooltip
+  }
+
+  @Directive({
+    selector: '[appStyledTooltip]',
+    standalone: true,
+    hostDirectives: [
+      {
+        directive: CustomStyleDirective,
+        inputs: ['customStyleInput'], // Mappa l'input di CustomStyleDirective
+        outputs: ['customStyleOutput'] // Mappa l'output di CustomStyleDirective
+      },
+      {
+        directive: TooltipDirective,
+        // tooltipText non viene mappato, quindi usa il valore di default
+        outputs: ['tooltipShown'] // Mappa l'output di TooltipDirective
+      }
+    ]
+  })
+  export class StyledTooltipDirective {
+    // Logica specifica per la direttiva combinata
+  }
+  #+end_src
+
+**Input e output opzionali**
+
+  - Come mostrato nell'esempio, è possibile omettere la mappatura di alcuni input o output nella definizione di ~hostDirectives~.
+  - Se un input non viene mappato, la direttiva "ospitata" utilizzerà il suo valore di default.
+  - Se un output non viene mappato, l'evento corrispondente non sarà accessibile dalla direttiva "ospitante".
+  - Questa flessibilità permette di personalizzare il comportamento delle direttive "ospitate" in base alle esigenze specifiche della direttiva "ospitante".
+
+**Vantaggi di ~hostDirectives~:**
+
+  - **Riuso di codice potenziato:** Riutilizza intere direttive senza doverne copiare e incollare il codice.
+  - **Modularità estrema:** Crea direttive "combinate" a partire da direttive più piccole e specializzate.
+  - **Manutenibilità semplificata:** Modifiche a una direttiva "ospitata" si riflettono automaticamente in tutte le direttive che la utilizzano.
+  - **Leggibilità migliorata:** Il codice è più conciso e focalizzato sulla logica specifica della direttiva "ospitante".
+
+**Considerazioni importanti:**
+
+  - Le direttive utilizzate in ~hostDirectives~ devono essere standalone.
+  - È possibile mappare gli input e gli output delle direttive "ospitate" per personalizzarne il comportamento all'interno della direttiva "ospitante".
+
+#+END_COMMENT
+
+#+BEGIN_COMMENT
 ** Lazy-loading components
 ** viewProvider
 ** DOM APIs
